RESOLVED FIXED104463
Fix unused parameter compile warnings
https://bugs.webkit.org/show_bug.cgi?id=104463
Summary Fix unused parameter compile warnings
Kangil Han
Reported 2012-12-08 20:07:36 PST
Remove compile warning messages by omitting parameter names
Attachments
Patch (2.91 KB, patch)
2012-12-08 20:11 PST, Kangil Han
no flags
Kangil Han
Comment 1 2012-12-08 20:11:50 PST
Kentaro Hara
Comment 2 2012-12-08 20:13:59 PST
Comment on attachment 178391 [details] Patch Looks ok
WebKit Review Bot
Comment 3 2012-12-09 00:14:49 PST
Comment on attachment 178391 [details] Patch Clearing flags on attachment: 178391 Committed r137058: <http://trac.webkit.org/changeset/137058>
WebKit Review Bot
Comment 4 2012-12-09 00:14:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.