Fix unused parameter compile warnings https://bugs.webkit.org/show_bug.cgi?id=104463

Patch by Kangil Han <kangil.han@samsung.com> on 2012-12-09
Reviewed by Kentaro Hara.

Remove compile warning messages by omitting parameter name.

Source/WebCore:

* platform/graphics/surfaces/GraphicsSurface.cpp:
(WebCore::GraphicsSurface::GraphicsSurface):

Source/WebKit2:

* UIProcess/CoordinatedGraphics/LayerTreeRenderer.cpp:
(WebKit::LayerTreeRenderer::createCanvas):

Canonical link: https://commits.webkit.org/122627@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137058 268f45cc-cd09-0410-ab3c-d52691b4dbfc